# novatel_edie

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.py  pyproject.toml
example/converter/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/novatel/c_api_components/: CMakeLists.txt  c_api_components.c
examples/novatel/c_api_file_parser/: CMakeLists.txt  c_api_file_parser.c
examples/novatel/c_api_parser/: CMakeLists.txt  c_api_parser.c
examples/novatel/command_encoding/: CMakeLists.txt  command_encoding.cpp
examples/novatel/converter_components/: CMakeLists.txt  converter_components.cpp
examples/novatel/converter_file_parser/: CMakeLists.txt  converter_file_parser.cpp
examples/novatel/converter_fileparser/: CMakeLists.txt  converter_fileparser.cpp
examples/novatel/converter_parser/: CMakeLists.txt  converter_parser.cpp
examples/novatel/dynamic_components/: CMakeLists.txt  dynamic_components.cpp
examples/novatel/dynamic_file_parser/: CMakeLists.txt  dynamic_file_parser.cpp
examples/novatel/dynamic_fileparser/: CMakeLists.txt  dynamic_fileparser.cpp
examples/novatel/dynamic_parser/: CMakeLists.txt  dynamic_parser.cpp
examples/novatel/json_parser/: CMakeLists.txt  json_parser.cpp
examples/novatel/range_decompressor/: range_decompressor.cpp
examples/novatel/rangecmp/: CMakeLists.txt  range_decompressor_example.cpp
examples/novatel/rxconfig/: CMakeLists.txt  rxconfig_example.cpp
src/common/: CMakeLists.txt
src/common/doc/: conf.py
src/common/include/common/: circularbuffer.hpp  crc32.hpp  framerinterface.hpp  jsonreader.hpp
src/common/include/common/logger/: logger.hpp
src/common/include/common/spdlog_setup/: conf.h
src/common/include/common/spdlog_setup/details/: conf_impl.h  setup_error.h  template_impl.h
src/common/include/novatel/edie/common/: circularbuffer.hpp  common.hpp  framerinterface.hpp  jsonreader.hpp  nexcept.h
src/common/src/: circularbuffer.cpp  common.cpp  jsonreader.cpp
src/common/test/: CMakeLists.txt  circularbufferunittest.cpp  crc32unittest.cpp  main.cpp
src/decoders/c_api/: CMakeLists.txt
src/decoders/c_api/api/: common.h  common_json_reader.h  common_logger.h  helpers.h  novatel_commander.h  novatel_common.h  novatel_encoder.h  novatel_file_parser.h  novatel_filter.h  novatel_framer.h  novatel_header_decoder.h  novatel_message_decoder.h  novatel_parser.h  version.h
src/decoders/c_api/src/: common_json_reader.cpp  common_logger.cpp  helpers.cpp  novatel_commander.cpp  novatel_encoder.cpp  novatel_file_parser.cpp  novatel_filter.cpp  novatel_framer.cpp  novatel_header_decoder.cpp  novatel_message_decoder.cpp  novatel_parser.cpp  version.cpp
src/decoders/common/: CMakeLists.txt
src/decoders/common/api/: basemessagedata.hpp  common.hpp  crc32.hpp  framerinterface.hpp  unknowndatahandler.hpp
src/decoders/common/doc/: conf.py
src/decoders/common/src/: basemessagedata.cpp  circular_buffer.cpp  common.cpp  encoder.cpp  json_reader.cpp  message_decoder.cpp
src/decoders/common/test/: CMakeLists.txt  circular_buffer_unit_test.cpp  circularbufferunittest.cpp  crc32_unit_test.cpp  crc32unittest.cpp  json_reader_unit_test.cpp  main.cpp  message_decoder_unit_test.cpp
src/decoders/dynamic_library/: CMakeLists.txt
src/decoders/dynamic_library/api/: common_jsonreader.hpp  novatel.hpp  novatel_commander.hpp  novatel_encoder.hpp  novatel_fileparser.hpp  novatel_filter.hpp  novatel_framer.hpp  novatel_header_decoder.hpp  novatel_message_decoder.hpp  novatel_parser.hpp
src/decoders/dynamic_library/include/decoders/dynamic_library/: common_jsonreader.hpp  common_logger.hpp  novatel_commander.hpp  novatel_encoder.hpp  novatel_fileparser.hpp  novatel_filter.hpp  (+4 more)
src/decoders/dynamic_library/src/: common_jsonreader.cpp  common_logger.cpp  novatel.cpp  novatel_commander.cpp  novatel_encoder.cpp  novatel_file_parser.cpp  novatel_fileparser.cpp  novatel_framer.cpp  novatel_header_decoder.cpp  novatel_message_decoder.cpp  novatel_parser.cpp  version.cpp
src/decoders/novatel/: CMakeLists.txt
src/decoders/novatel/api/: commander.hpp  common.hpp  encoder.hpp  fileparser.hpp  filter.hpp  framer.hpp  header_decoder.hpp  message_decoder.hpp  novatelparser.hpp  parser.hpp
src/decoders/novatel/api/rangecmp/: common.hpp  range_decompressor.hpp
src/decoders/novatel/api/rxconfig/: rxconfig_handler.hpp
src/decoders/novatel/src/: commander.cpp  encoder.cpp  file_parser.cpp  fileparser.cpp  filter.cpp  framer.cpp  header_decoder.cpp  message_decoder.cpp  novatelparser.cpp  parser.cpp
src/decoders/novatel/src/rangecmp/: range_decompressor.cpp
src/decoders/novatel/src/rxconfig/: rxconfig_handler.cpp
src/decoders/novatel/test/: CMakeLists.txt  encodertest.cpp  main.cpp  novatel_test.cpp  novateltest.cpp  proprietary_test.cpp  proprietarytest.cpp  range_cmp_test.cpp  rangecmptest.cpp  rx_config_test.cpp  rxconfigtest.cpp
src/decoders/novatel/test/resources/: novatel_message_definitions.hpp
src/hw_interface/c_api/: CMakeLists.txt
src/hw_interface/c_api/api/: common.h  stream_interface.h  version.h
src/hw_interface/c_api/src/: stream_interface.cpp  version.cpp
src/hw_interface/dynamic_library/: CMakeLists.txt
src/hw_interface/dynamic_library/api/: stream_interface.hpp
src/hw_interface/dynamic_library/src/: stream_interface.cpp  version.cpp
src/hw_interface/stream_interface/: CMakeLists.txt
src/hw_interface/stream_interface/api/: filestream.hpp  inputmemorystream.hpp  inputportstream.hpp  inputstreaminterface.hpp  memorystream.hpp  multioutputfilestream.hpp  outputmemorystream.hpp  outputportstream.hpp  outputstreaminterface.hpp
src/hw_interface/stream_interface/doc/: conf.py
src/hw_interface/stream_interface/src/: filestream.cpp  inputfilestream.cpp  inputmemorystream.cpp  memorystream.cpp  multioutputfilestream.cpp  outputfilestream.cpp  outputmemorystream.cpp
src/hw_interface/stream_interface/test/: CMakeLists.txt  filestreamunittest.cpp  inputfilestreamunittest.cpp  main.cpp  multioutputfilestreamunittest.cpp  outputfilestreamunittest.cpp
(+157 files in other folders)
