add_subdirectory(novatel/command_encoding)
add_subdirectory(novatel/converter_file_parser)
add_subdirectory(novatel/converter_components)
add_subdirectory(novatel/converter_parser)
add_subdirectory(novatel/dynamic_file_parser)
add_subdirectory(novatel/dynamic_components)
add_subdirectory(novatel/dynamic_parser)
add_subdirectory(novatel/rangecmp)
add_subdirectory(novatel/rxconfig)
