set(TARGET_NAME "decoders_c_api")
file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
add_library(${TARGET_NAME} ${SOURCES})
find_package(Threads REQUIRED)
target_link_libraries(${TARGET_NAME} PUBLIC hw_interface_c_api PRIVATE Threads::Threads common novatel)
add_custom_command(TARGET ${TARGET_NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/api/ ${CMAKE_SOURCE_DIR}/bin/api/decoders/${TARGET_NAME}/api/)
set_property(TARGET ${TARGET_NAME} PROPERTY FOLDER "decoders")
target_include_directories(${TARGET_NAME} PUBLIC api)
target_compile_features(${TARGET_NAME} INTERFACE c_std_99)

if(WIN32 AND BUILD_SHARED_LIBS)
    target_compile_definitions(${TARGET_NAME} PRIVATE DECODERS_EXPORTS)
else()
    target_compile_definitions(${TARGET_NAME} PUBLIC DECODERS_STATIC_DEFINE)
endif()
